--- a/bands.html
+++ b/bands.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>Bands In Town</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/4/solar/bootstrap.min.css">
+    <link rel="stylesheet" href="bands.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -17,18 +19,25 @@
 </head>
 
 <body>
-    <!-- Artist Select Box -->
-    <form id="artist-form">
-        <!-- Label for Text Box -->
-        <label for="artist-input">Choose Your Artist</label>
-        <!-- Text Input Box -->
-        <input type="text" id="artist-input">
-        <br>
-        <!-- Submit Button -->
-        <input id="select-artist" type="submit" value="GO!">
-    </form>
-    <!-- Artist Information -->
-    <div id="artist-div"></div>
+    <div class="container">
+        <!-- Artist Select Box -->
+        <div class="form-group" id="form">
+            <label for="exampleTextarea">Type in your Favourite Artist</label>
+            <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+        </div>
+        <form id="artist-form">
+            <!-- Label for Text Box -->
+            <label for="artist-input">Choose Your Artist</label>
+            <!-- Text Input Box -->
+            <input type="text" id="artist-input">
+            <br>
+            <!-- Submit Button -->
+            <input id="select-artist" type="submit" value="GO!">
+        </form>
+        <!-- Artist Information -->
+        <div id="artist-div"></div>
+    </div>
+
 </body>
 
 </html>
