Remove existing code

--- a/bands.html
+++ b/bands.html
@@ -23,17 +23,10 @@
         <!-- Artist Select Box -->
         <div class="form-group" id="form">
             <label for="exampleTextarea">Type in your Favourite Artist</label>
-            <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+            <textarea class="form-control" id="artist-input" rows="3"></textarea>
+            <button type="submit" class="btn btn-primary" id="select-artist">Submit</button>
+
         </div>
-        <form id="artist-form">
-            <!-- Label for Text Box -->
-            <label for="artist-input">Choose Your Artist</label>
-            <!-- Text Input Box -->
-            <input type="text" id="artist-input">
-            <br>
-            <!-- Submit Button -->
-            <input id="select-artist" type="submit" value="GO!">
-        </form>
         <!-- Artist Information -->
         <div id="artist-div"></div>
     </div>
